--- a/webservice/app.yaml
+++ b/webservice/app.yaml
@@ -3,6 +3,6 @@ env_variables:
   SQL_USER: root
   SQL_PASSWORD: pass
   SQL_DATABASE: my_database
-  INSTANCE_CONNECTION_NAME: ututors:us-central1-a:test
+  INSTANCE_CONNECTION_NAME: ututors:us-central1:test
 beta_settings:
-  cloud_sql_instances: ututors:us-central1-a:test
+  cloud_sql_instances: ututors:us-central1:test
